More menu tweaks * Fix left alignment for expanded content * Vertical alignment with topics screen * Fixes for journal entries' "Domov" button

--- a/resources/sass/_menu.scss
+++ b/resources/sass/_menu.scss
@@ -20,10 +20,6 @@ $padding: 5px;
     border-radius: 50%;
     display: inline-block;
 
-    &.nav-up {
-        display: none;
-    }
-
     &__line {
         height: 2px;
         width: $size;
@@ -39,6 +35,10 @@ $padding: 5px;
         // width: $size / 2;
         float: right;
     }
+}
+
+:not(.nav-active) > .menu-icon.nav-up {
+    display: none;
 }
 
 .nav {
